--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jayesse",
-  "version": "1.3.0",
+  "version": "1.6.0",
   "description": "A JavaScript Stack",
   "scripts": {
     "test": "savor test",
@@ -23,7 +23,8 @@
   "files": [
     "lib/**/*",
     "src/**/*",
-    "assets/**/*"
+    "assets/**/*",
+    "tsconfig.json"
   ],
   "dependencies": {
     "@types/react": "^16.9.35",
