--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "es5",                
       "module": "commonjs",                     
       "strict": true,             
-      "jsx": "preserve",     
+      "jsx": "react",     
       "sourceMap": true,
       "allowJs": true,
       "declaration": true,         
