added support for loading more app props

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",                     
       "strict": true,             
       "jsx": "react",     
+      "resolveJsonModule": true,
       "sourceMap": true,
       "allowJs": true,
       "declaration": true,         
