--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jayesse",
-  "version": "1.9.9",
+  "version": "1.9.10",
   "description": "A JavaScript Stack",
   "scripts": {
     "test": "savor test",
@@ -32,12 +32,15 @@
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.3.0",
     "axios": "^0.19.2",
+    "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^2.4.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "savor": "^1.3.0"
