--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "module": "commonjs",                     
       "strict": true,             
       "jsx": "react",     
-      "resolveJsonModule": true,
+      "resolveJsonModule": false,
       "sourceMap": true,
       "allowJs": true,
       "declaration": true,         
