--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jayesse",
-  "version": "1.9.10",
+  "version": "1.9.11",
   "description": "A JavaScript Stack",
   "scripts": {
     "test": "savor test",
@@ -23,6 +23,7 @@
   "files": [
     "lib/**/*",
     "src/**/*",
+    "scripts/**/**",
     "assets/**/*",
     "tsconfig.json"
   ],
