--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "carmel.json"
   ],
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@ant-design/icons-react": "^2.0.1",
+    "@types/node": "^14.14.8",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-hamburger-menu": "^0.0.3",
