--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,15 @@
       "resolveJsonModule": false,
       "sourceMap": true,
       "allowJs": true,
+      "noEmitHelpers": false,
       "declaration": true,         
+      "moduleResolution": "node",
       "esModuleInterop": true,                 
       "forceConsistentCasingInFileNames": true,
       "outDir": "./lib"
     },
     "include": [
-      "src/**/*"
+      "src/**/*", "assets/workers"
     ]
 }
   
