--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jayesse",
-  "version": "1.12.6",
-  "description": "A JavaScript Stack",
+  "version": "1.13.0",
+  "description": "The Default Carmel JavaScript Stack",
   "scripts": {
     "test": "savor test",
     "cov": "savor cov",
@@ -31,7 +31,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@ant-design/icons-react": "^2.0.1",
-    "@carmel/js": "^1.1.1",
+    "@carmel/js": "^1.2.0",
     "@koale/useworker": "^3.2.1",
     "@types/draft-js": "^0.10.44",
     "@types/qrcode.react": "^1.0.1",
@@ -52,6 +52,7 @@
     "connected-react-router": "^6.9.1",
     "draft-js": "^0.11.7",
     "draft-js-plugins-utils": "^2.0.3",
+    "filepond": "^4.25.1",
     "history": "^4.10.1",
     "js-base64": "^3.6.0",
     "libp2p-noise": "^2.0.3",
@@ -62,6 +63,7 @@
     "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-filepond": "^7.1.1",
     "react-hook-form": "^6.15.3",
     "react-hot-loader": "^4.13.0",
     "react-markdown": "^4.3.1",
@@ -73,12 +75,15 @@
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^12.2.1",
     "react-webcam": "^5.2.2",
+    "react-wufoo-embed": "^1.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "remark-shortcodes": "^0.3.1",
     "sanitize-html": "^1.27.2",
     "styled-components": "^5.2.1",
     "styled-jsx": "^3.3.0",
+    "tailwindcss": "^2.2.7",
+    "twind": "^0.16.16",
     "typed.js": "^2.0.11",
     "workerpool": "^6.0.4"
   },
